# rocolatey

./: .bumpyconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  THIRDPARTY.json  docker_here  psakefile.ps1  renovate.json
.cargo/: config.toml
.github/workflows/: Rust-Build-Pipeline.yml  linux.yml
nuget/: rocolatey.nuspec
nuget/tools/: ChocolateyInstall.ps1  RocoTabCompletion.psm1  VERIFICATION.txt
rocolatey-cli/: Cargo.toml  LICENSE  build.rs
rocolatey-cli/completions/: _roco  _roco.ps1  roco.bash  roco.elv  roco.fish
rocolatey-cli/src/: cli.rs  command_bad.rs  command_license.rs  command_list.rs  command_outdated.rs  command_source.rs  command_upgrade.rs  main.rs
rocolatey-lib/: Cargo.toml
rocolatey-lib/src/: lib.rs
rocolatey-lib/src/roco/: local.rs  mod.rs  nuget2.rs  nuget3.rs  remote.rs  semver.rs
rocolatey-server/: Cargo.toml
rocolatey-server/src/: main.rs
test/: demo_list  demo_outdated
test/fake_choco_home/config/: chocolatey.config
test/fake_choco_home/lib/Boxstarter/: boxstarter.nuspec
test/fake_choco_home/lib/Chocolatey/: Chocolatey.nuspec
test/fake_choco_home/lib/Firefox/: Firefox.nuspec
test/fake_choco_home/lib/Thunderbird/: Thunderbird.nuspec
test/fake_choco_home/lib/adobeair/: adobeair.nuspec
test/fake_choco_home/lib/adobereader/: adobereader.nuspec
test/fake_choco_home/lib/chocolatey-core.extension/: chocolatey-core.extension.nuspec
test/fake_choco_home/lib/demo.myenv.portable/: demo.myenv.portable.nuspec
test/fake_choco_home/lib/googlechrome/: googlechrome.nuspec
test/fake_choco_home/lib/jre8/: jre8.nuspec
test/fake_choco_home/lib/microsoft-edge/: microsoft-edge.nuspec
test/fake_choco_home/lib/morg.pkg.id1/: morg.pkg.id1.nuspec
test/fake_choco_home/lib/morg.pkg.id10/: morg.pkg.id10.nuspec
test/fake_choco_home/lib/morg.pkg.id11/: morg.pkg.id11.nuspec
test/fake_choco_home/lib/morg.pkg.id12/: morg.pkg.id12.nuspec
test/fake_choco_home/lib/morg.pkg.id13/: morg.pkg.id13.nuspec
test/fake_choco_home/lib/morg.pkg.id14/: morg.pkg.id14.nuspec
test/fake_choco_home/lib/morg.pkg.id15/: morg.pkg.id15.nuspec
test/fake_choco_home/lib/morg.pkg.id16/: morg.pkg.id16.nuspec
test/fake_choco_home/lib/morg.pkg.id17/: morg.pkg.id17.nuspec
test/fake_choco_home/lib/morg.pkg.id18/: morg.pkg.id18.nuspec
test/fake_choco_home/lib/morg.pkg.id19/: morg.pkg.id19.nuspec
test/fake_choco_home/lib/morg.pkg.id2/: morg.pkg.id2.nuspec
test/fake_choco_home/lib/morg.pkg.id20/: morg.pkg.id20.nuspec
test/fake_choco_home/lib/morg.pkg.id21/: morg.pkg.id21.nuspec
test/fake_choco_home/lib/morg.pkg.id22/: morg.pkg.id22.nuspec
test/fake_choco_home/lib/morg.pkg.id23/: morg.pkg.id23.nuspec
test/fake_choco_home/lib/morg.pkg.id24/: morg.pkg.id24.nuspec
test/fake_choco_home/lib/morg.pkg.id25/: morg.pkg.id25.nuspec
test/fake_choco_home/lib/morg.pkg.id26/: morg.pkg.id26.nuspec
test/fake_choco_home/lib/morg.pkg.id27/: morg.pkg.id27.nuspec
test/fake_choco_home/lib/morg.pkg.id28/: morg.pkg.id28.nuspec
test/fake_choco_home/lib/morg.pkg.id29/: morg.pkg.id29.nuspec
test/fake_choco_home/lib/morg.pkg.id3/: morg.pkg.id3.nuspec
test/fake_choco_home/lib/morg.pkg.id30/: morg.pkg.id30.nuspec
test/fake_choco_home/lib/morg.pkg.id31/: morg.pkg.id31.nuspec
test/fake_choco_home/lib/morg.pkg.id32/: morg.pkg.id32.nuspec
test/fake_choco_home/lib/morg.pkg.id33/: morg.pkg.id33.nuspec
test/fake_choco_home/lib/morg.pkg.id34/: morg.pkg.id34.nuspec
test/fake_choco_home/lib/morg.pkg.id35/: morg.pkg.id35.nuspec
test/fake_choco_home/lib/morg.pkg.id36/: morg.pkg.id36.nuspec
test/fake_choco_home/lib/morg.pkg.id37/: morg.pkg.id37.nuspec
test/fake_choco_home/lib/morg.pkg.id38/: morg.pkg.id38.nuspec
test/fake_choco_home/lib/morg.pkg.id39/: morg.pkg.id39.nuspec
test/fake_choco_home/lib/morg.pkg.id4/: morg.pkg.id4.nuspec
test/fake_choco_home/lib/morg.pkg.id40/: morg.pkg.id40.nuspec
test/fake_choco_home/lib/morg.pkg.id41/: morg.pkg.id41.nuspec
test/fake_choco_home/lib/morg.pkg.id42/: morg.pkg.id42.nuspec
test/fake_choco_home/lib/morg.pkg.id43/: morg.pkg.id43.nuspec
test/fake_choco_home/lib/morg.pkg.id44/: morg.pkg.id44.nuspec
test/fake_choco_home/lib/morg.pkg.id45/: morg.pkg.id45.nuspec
test/fake_choco_home/lib/morg.pkg.id46/: morg.pkg.id46.nuspec
test/fake_choco_home/lib/morg.pkg.id47/: morg.pkg.id47.nuspec
test/fake_choco_home/lib/python3/: python3.nuspec
test/fake_repo/: Firefox.81.0.2.0.nupkg
(+13 files in other folders)
