[package]
name = "roco"
version = "0.8.0"
authors = ["Manfred Wallner <schusterfredl@mwallner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocolatey-lib = { path = "../rocolatey-lib" }
tokio = { version = "1.35.1", features = ["full"] }
clap = "4.4.14"

[build-dependencies]
clap = "4.4.14"
clap_complete = "4.4.6"

