[package]
license = "MIT"
name = "roco"
version = "0.9.2"
authors = ["Manfred Wallner <schusterfredl@mwallner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocolatey-lib = { path = "../rocolatey-lib" }
tokio = { version = "1.35.1", features = ["full"] }
clap = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
clap = "4.1.1"
clap_complete = "4.4.6"

[dev-dependencies]
assert_cmd = "2.0"
