[package]
name = "rocolatey-lib"
version = "0.8.0"
authors = ["Manfred Wallner <schusterfredl@mwallner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.30.0"
glob = "0.3.1"
futures = "0.3.28"
reqwest = "0.11.18"
semver = "1.0.18"
regex = "1.10.2"
walkdir = "2.3.3"
http-auth-basic = "0.3.3"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.105"
serde_with = "3.0.0"
serde = "1.0.164"
