[package]
name = "rocolatey-lib"
version = "0.8.0"
authors = ["Manfred Wallner <schusterfredl@mwallner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
glob = "0.3.1"
futures = "0.3.29"
reqwest = "0.11.23"
semver = "1.0.20"
regex = "1.10.2"
walkdir = "2.4.0"
http-auth-basic = "0.3.3"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
serde = "1.0.193"
