[package]
license = "MIT"
name = "rocolatey-server"
version = "0.9.2"
authors = ["Manfred Wallner <schusterfredl@mwallner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocolatey-lib = { path = "../rocolatey-lib" }
tokio = { version = "1.35.1", features = ["full"] }
clap = "3.2.25"
warp = "0.3.6"
